Fix potentially clobbered variables in PG_TRY/PG_CATCH blocks
Some local variables may have an undefined value after longjmp, which can lead
to undefined behavior.

This patch adds volatile to such variables based on a compiler warning.
Fix a potential memory leak related to creating a hashmap inside a try/catch
block.
Add a compiler flag for throwing warnings related to clobbering variables.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ if (APPLE)
     set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} -bundle_loader ${PG_BIN_DIR}/postgres")
 endif()
 # set c and ld flags for all projects
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${PG_C_FLAGS}")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wclobbered ${PG_C_FLAGS}")
 
 # generate version
 if(NOT DEFINED DISKQUOTA_VERSION)
